src/commands/snapshots/backup__commands__run__tests__snapshot_mount_args.snap
---
source: src/commands/run.rs
expression: "build_mount_args(&make_cli(&[]), &make_cfg())"
---
[
    "mount-nas",
    "new-backups",
]
